--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,58 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.container{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    column-gap: 2px;
+    /* grid-template-rows: 150px 150px 150px; */
+    grid-auto-rows: 50px;
+    row-gap: 2px;
+    align-items: stretch;
+    justify-items: stretch;
+}
+
+.item1{
+    grid-column: 1/6;
+    grid-row: 1/3;
+}
+
+.item2{
+    grid-column: 1/6;
+    grid-row: 3/4;
+}
+
+.item3{
+    grid-column: 1/4;
+    grid-row: 4/7;
+}
+
+.item4{
+    grid-column: 4/6;
+    grid-row: 4/16;
+}
+
+.item5{
+    grid-column: 1/4;
+    grid-row: 7/13;
+}
+
+.item6{
+    grid-column: 1/4;
+    grid-row: 13/16;
+}
+
+.item7{
+    grid-column: 1/6;
+    grid-row: 16/17;
+}
+
+
+.container>div {
+    background-color: cornflowerblue;
+    border: 2px solid blue;
+    color: white;
+    font-size: 1.2em;
+}
+
