--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
 }
 
 .container{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    column-gap: 2px;
-    /* grid-template-rows: 150px 150px 150px; */
     grid-auto-rows: 48px;
     align-items: stretch;
     justify-items: stretch;
@@ -71,43 +71,153 @@
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
-    font-size: 32px;
+    font-size: 33px;
     color: white;
 }
 
-.item3{
-    grid-column: 1/4;
-    grid-row: 4/7;
-    background-color: #ececec;
-    border-radius: 50px;
+.navegacao #selecionado {
+    background-color: #ff7b009c;
 }
 
-.item4{
+.sobre{
+    grid-column: 1/4;
+    grid-row: 4/8;
+    background-color: #ececec;
+    border-radius: 50px;
+    margin: 12px;
+}
+
+.sobre h2{
+    margin-left: 25px;
+    border-radius: 50px;
+    color: #ff8024;
+    font-family: "Jost", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 40px;
+}
+
+.sobre p{
+    margin: 0px 18px;
+    text-align: justify;
+    text-indent: 50px;
+}
+
+.localizacao {
+    display: flex;
+    flex-direction: column; 
     grid-column: 4/6;
-    grid-row: 4/16;
-    background-color: #ececec;
+    grid-row: 4/19;
+    margin: 12px;
     border-radius: 50px;
-}
-
-.item5{
-    grid-column: 1/4;
-    grid-row: 7/13;
-}
-
-.item6{
-    grid-column: 1/4;
-    grid-row: 13/16;
     background-color: #ececec;
-    border-radius: 50px;
 }
 
-.item7{
+.localizacao h2{
+    margin-left: 25px;
+    color: #ff8024;
+    font-family: "Jost", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 40px;
+}
+
+.localizacao p{
+    margin: 0px 18px;
+    text-align: justify;
+}
+
+.localizacao .mapa{
+    margin: 10px auto;
+}
+
+.localizacao h3{
+    margin-left: 18px;
+    font-family: "Jost", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 26px;
+}
+
+.localizacao .proxima{
+    text-align: justify;
+    line-height: 34px;
+}
+
+.imagens{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 168px 168px;
+    grid-column: 1/4;
+    grid-row: 8/15;
+    align-items: stretch;
+    justify-items: stretch;
+    margin: 0 10px;
+}
+
+.imagens img{
+    width: 285px;
+    height: 150px;
+    margin: auto;
+}
+
+.prservicos{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 48px);
+    grid-column: 1/4;
+    grid-row: 15/19;
+    align-items: stretch;
+    justify-items: stretch;
+    margin: 10px;
+    border-radius: 50px;
+    background-color: #ececec;
+}
+
+.prservicos h2{
+    margin-left: 25px;
+    grid-column: 1/3;
+    grid-row: 1/2;
+    color: #ff8024;
+    font-family: "Jost", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 35px;
+}
+
+.prservicos ul {
+    padding-left: 30px;
+    line-height: 25px;
+    font-size: 26px;
+    margin: 0px 18px;
+}
+
+.prservicos ul .parteum{
+
+    grid-column: 1/2;
+    grid-row: 2/6;
+    text-align: left;
+}
+
+.prservicos ul .partedois{
+    grid-column: 2/3;
+    grid-row: 2/6;
+    text-align: left;
+}
+
+.rodape{
+    display: flex;
+    align-items: center; /* Isso centralizará verticalmente o seu h1 */
+    justify-content: center; /* Isso já centraliza horizontalmente o seu h1 com text-align */
+    margin-top: 15px;
     grid-column: 1/6;
-    grid-row: 16/17;
-}
-
-
-.container>div {
-    color: black;
-    font-size: 1.2em;
+    grid-row: 19/20;
+    color: white;
+    background-color: black;
+    font-size: 14px;
+    font-weight: bold;
 }
