--- a/css/acomodacao.css
+++ b/css/acomodacao.css
@@ -4,6 +4,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
 }
 
 .container{
@@ -79,39 +81,230 @@
     background-color: #ff7b009c;
 }
 
-.item3{
-    grid-column: 1/4;
-    grid-row: 4/7;
-    background-color: #ececec;
-    border-radius: 50px;
-}
-
-.item4{
-    grid-column: 4/6;
-    grid-row: 4/16;
-    background-color: #ececec;
-    border-radius: 50px;
-}
-
-.item5{
-    grid-column: 1/4;
-    grid-row: 7/13;
-}
-
-.item6{
-    grid-column: 1/4;
-    grid-row: 13/16;
-    background-color: #ececec;
-    border-radius: 50px;
-}
-
-.item7{
+.titulo{
     grid-column: 1/6;
-    grid-row: 16/17;
+    grid-row: 4/6;
+    margin: 12px;
 }
 
+.titulo h2{
+    margin-left: 38px;
+    color: #ff8024;
+    font-family: "Jost", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 42px;
+}
 
-.container>div {
+.todos-quartos{
+    grid-column: 1/6;
+    grid-row: 6/20;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 672px;
+}
+
+.todos-quartos .quarto1{
+    grid-column: 1/2;
+    display: flex;
+    flex-direction: column; 
+    margin: 5px 19px 10px 38px;
+    border-radius: 35px;
+    background-color: #ececec;
+}
+
+.todos-quartos .quarto1 h3{
+    margin: 6px 18px;
+    font-family: "Jost", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 32px;
+}
+
+.todos-quartos .quarto1 img{
+    margin: 10px auto;
+    width: 420px;
+    height: 240px;
+}
+
+.quarto1 .info1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 8px 16px 108px 32px;
+    margin: 0 35px;
+    border: 1px solid black;
+    border-radius: 30px;
+    background-color: #faa86d;
+}
+
+.quarto1 .preco1{
+    margin: 30px 35px 10px 35px;
+    text-align: center;
+}
+
+.quarto1 .preco1 p{
+    text-decoration: none;
+    padding: 10px 50px;
+
+    gap: 30px;
+
+    font-size: 22px;
+    font-family: "Jost", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+
+    border-radius: 30px;
+    transition: all 0.9s ease 0s;
     color: black;
-    font-size: 1.2em;
+    border: 1px solid black;
+    background-color: #faa86d;
 }
+
+.preco1 p:hover{
+    background-color: tomato;
+    color: black;
+}
+
+.todos-quartos .quarto2{
+    grid-column: 2/3;
+    display: flex;
+    flex-direction: column; 
+    margin: 5px 19px 10px 19px;
+    border-radius: 35px;
+    background-color: #ececec;
+}
+
+.todos-quartos .quarto2 h3{
+    margin: 6px 18px;
+    font-family: "Jost", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 32px;
+}
+
+.todos-quartos .quarto2 img{
+    margin: 10px auto;
+    width: 420px;
+    height: 240px;
+}
+
+.quarto2 .info2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 8px 16px 40px 32px;
+    margin: 0 35px;
+    border: 1px solid black;
+    border-radius: 30px;
+    background-color: #faa86d;
+}
+
+.quarto2 .preco2{
+    margin: 30px 35px 10px 35px;
+    text-align: center;
+}
+
+.quarto2 .preco2 p{
+    text-decoration: none;
+    padding: 10px 50px;
+
+    gap: 30px;
+
+    font-size: 22px;
+    font-family: "Jost", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+
+    border-radius: 30px;
+    transition: all 0.9s ease 0s;
+    color: black;
+    border: 1px solid black;
+    background-color: #faa86d;
+}
+
+.preco2 p:hover{
+    background-color: tomato;
+    color: black;
+}
+
+.todos-quartos .quarto3{
+    grid-column: 3/4;
+    margin: 5px 38px 10px 19px;
+    border-radius: 35px;
+    background-color: #ececec;
+}
+
+.todos-quartos .quarto3 h3{
+    margin: 6px 18px;
+    font-family: "Jost", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 32px;
+}
+
+.todos-quartos .quarto3 img{
+    margin: 10px auto;
+    width: 420px;
+    height: 240px;
+}
+
+.quarto3 .info3{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 8px 16px 35px 32px;
+    margin: 0 35px;
+    border: 1px solid black;
+    border-radius: 30px;
+    background-color: #faa86d;
+}
+
+.quarto3 .preco3{
+    margin: 30px 35px 10px 35px;
+    text-align: center;
+}
+
+.quarto3 .preco3 p{
+    text-decoration: none;
+    padding: 10px 50px;
+
+    gap: 30px;
+
+    font-size: 22px;
+    font-family: "Jost", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+
+    border-radius: 30px;
+    transition: all 0.9s ease 0s;
+    color: black;
+    border: 1px solid black;
+    background-color: #faa86d;
+}
+
+.preco3 p:hover{
+    background-color: tomato;
+    color: black;
+}
+
+.rodape{
+    display: flex;
+    align-items: center; /* Isso centralizará verticalmente o seu h1 */
+    justify-content: center; /* Isso já centraliza horizontalmente o seu h1 com text-align */
+    margin-top: 15px;
+    grid-column: 1/6;
+    grid-row: 20/21;
+    color: white;
+    background-color: black;
+    font-size: 10px;
+    font-weight: bold;
+}
+
