--- a/css/servicos.css
+++ b/css/servicos.css
@@ -4,13 +4,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
 }
 
 .container{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    column-gap: 2px;
-    /* grid-template-rows: 150px 150px 150px; */
     grid-auto-rows: 48px;
     align-items: stretch;
     justify-items: stretch;
@@ -71,7 +71,7 @@
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
-    font-size: 32px;
+    font-size: 33px;
     color: white;
 }
 
@@ -86,48 +86,60 @@
 }
 
 .titulo h2{
-    margin-left: 38px;
+    margin-left: 20px;
     color: #ff8024;
     font-family: "Jost", sans-serif;
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
-    font-size: 42px;
+    font-size: 48px;
 }
 
-.item3{
-    grid-column: 1/4;
-    grid-row: 4/7;
-    background-color: #ececec;
-    border-radius: 50px;
-}
-
-.item4{
-    grid-column: 4/6;
-    grid-row: 4/16;
-    background-color: #ececec;
-    border-radius: 50px;
-}
-
-.item5{
-    grid-column: 1/4;
-    grid-row: 7/13;
-}
-
-.item6{
-    grid-column: 1/4;
-    grid-row: 13/16;
-    background-color: #ececec;
-    border-radius: 50px;
-}
-
-.item7{
+.imagens{
     grid-column: 1/6;
-    grid-row: 16/17;
+    grid-row: 6/24;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 288px);
+    justify-items: center;
+    align-items: center;
 }
 
+.imagens img{
+    width: 480px;
+    height: 260px;
+    border-radius: 35px;
+}
 
-.container>div {
-    color: black;
-    font-size: 1.2em;
+.imagem-com-legenda {
+    position: relative;
+}
+
+.legenda {
+    position: absolute;
+    padding: 8px; /* Espaçamento interno para a legenda */
+    text-align: center;
+    bottom: 0;
+    width: 100%;
+    border-radius: 0 0 35px 35px;
+    background-color: #ff6e30aa; /* Fundo semi-transparente */
+    color: white;
+    font-family: "Jost", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 22px;
+}
+
+.rodape{
+    display: flex;
+    align-items: center; /* Isso centralizará verticalmente o seu h1 */
+    justify-content: center; /* Isso já centraliza horizontalmente o seu h1 com text-align */
+    margin-top: 15px;
+    grid-column: 1/6;
+    grid-row: 24/25;
+    color: white;
+    background-color: black;
+    font-size: 10px;
+    font-weight: bold;
 }
