--- a/css/galeria.css
+++ b/css/galeria.css
@@ -4,13 +4,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
 }
 
 .container{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    column-gap: 2px;
-    /* grid-template-rows: 150px 150px 150px; */
     grid-auto-rows: 48px;
     align-items: stretch;
     justify-items: stretch;
@@ -71,7 +71,7 @@
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
-    font-size: 32px;
+    font-size: 33px;
     color: white;
 }
 
@@ -79,39 +79,48 @@
     background-color: #ff7b009c;
 }
 
-.item3{
-    grid-column: 1/4;
-    grid-row: 4/7;
-    background-color: #ececec;
-    border-radius: 50px;
-}
-
-.item4{
-    grid-column: 4/6;
-    grid-row: 4/16;
-    background-color: #ececec;
-    border-radius: 50px;
-}
-
-.item5{
-    grid-column: 1/4;
-    grid-row: 7/13;
-}
-
-.item6{
-    grid-column: 1/4;
-    grid-row: 13/16;
-    background-color: #ececec;
-    border-radius: 50px;
-}
-
-.item7{
+.titulo{
     grid-column: 1/6;
-    grid-row: 16/17;
+    grid-row: 4/6;
+    margin: 12px;
 }
 
-
-.container>div {
-    color: black;
-    font-size: 1.2em;
+.titulo h2{
+    margin-left: 20px;
+    color: #ff8024;
+    font-family: "Jost", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 42px;
 }
+
+.imagens{
+    grid-column: 1/6;
+    grid-row: 6/26;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 240px);
+    justify-items: center;
+    align-items: center;
+}
+
+.imagens img{
+    width: 350px;
+    height: 225px;
+    border-radius: 25px;
+}
+
+.rodape{
+    display: flex;
+    align-items: center; /* Isso centralizará verticalmente o seu h1 */
+    justify-content: center; /* Isso já centraliza horizontalmente o seu h1 com text-align */
+    margin-top: 15px;
+    grid-column: 1/6;
+    grid-row: 26/27;
+    color: white;
+    background-color: black;
+    font-size: 10px;
+    font-weight: bold;
+}
+
